apps/kube/ows/manifest/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
    name: ows-publicapi-route
    namespace: ows
spec:
    parentRefs:
        - name: kbve-gateway
          namespace: kbve
    hostnames:
        - api.chuckrpg.com
    rules:
        - matches:
              - path:
                    type: PathPrefix
                    value: /
          backendRefs:
              - name: ows-publicapi
                port: 80
